--- a/settings.gradle
+++ b/settings.gradle
@@ -3,14 +3,18 @@ pluginManagement {
         gradlePluginPortal()
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' } // ✅ 여기
     }
 }
+
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' } // ✅ 여기도
     }
 }
+
 rootProject.name = "MyPet"
 include ':app'
